adds swagger description
