# swagger.json
@@ -98,7 +98,7 @@
     "/products/recommendation": {
       "get": {
         "tags": ["Products"],
-        "summary": "Returns recommended daily calorie intake",
+        "summary": "Returns a list of not recommended product categories",
         "parameters": [],
         "requestBody": {
           "description": "User's blood number",
@@ -133,7 +133,7 @@
       },
       "post": {
         "tags": ["Products"],
-        "summary": "Returns recommended daily calorie intake",
+        "summary": "Returns a list of not recommended product categories and save user's physiological parameters",
         "parameters": [],
         "security": [{ "Bearer": [] }],
         "requestBody": {
@@ -182,7 +182,7 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/EatenProductsRequest"
+                "$ref": "#/components/schemas/AddEatenProductsRequest"
               }
             }
           }
@@ -194,7 +194,43 @@
             "content": {
               "application/json": {
                 "schema": {
-                  "$ref": "#/components/schemas/EatenProductsResponse"
+                  "$ref": "#/components/schemas/AddEatenProductsResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          },
+          "500" : {
+             "description": "Internal Server Error"
+          }
+        }
+      },
+      "get": {
+        "tags": ["Products"],
+        "summary": "Get the eaten product on a specific day",
+        "parameters": [],
+        "security": [{ "Bearer": [] }],
+        "requestBody": {
+          "description": "Requested date",
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/GetEatenProductsRequest"
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/GetEatenProductsResponse"
                 }
               }
             }
@@ -209,7 +245,33 @@
         }
       }
     },
-    "/products/eaten/:eatenFoodId": {}
+    "/products/eaten/:id": {
+      "delete": {
+        "tags": ["Products"],
+        "summary": "Delete the product which was added to eaten list",
+        "parameters": [{"params": "id"}],
+        "security": [{ "Bearer": [] }],
+        "responses": {
+          "200": {
+            "description": "Successful operation",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "$ref": "#/components/schemas/DeleteEatenProductsResponse"
+                }
+              }
+            }
+          },
+          "400": {
+            "description": "Bad request (invalid request body)",
+            "content": {}
+          },
+          "500" : {
+             "description": "Internal Server Error"
+          }
+        }
+      }
+    }
   },
   "components": {
     "schemas": {
@@ -330,7 +392,7 @@
           "productsNotAllowed": ["мучные", "молочные", "мясо"]
         }
       },
-      "EatenProductsRequest": {
+      "AddEatenProductsRequest": {
         "type": "object",
         "required": ["title", "weight", "calories", "date"],
         "properties": {
@@ -356,7 +418,7 @@
           }
         }
       },
-      "EatenProductsResponse": {
+      "AddEatenProductsResponse": {
         "type": "object",
         "items": {
           "type": "object",
@@ -371,6 +433,64 @@
           "message": "success",
           "savedProductId": "61001b689081880004a65f49"
         }
+      },
+      "GetEatenProductsRequest": {
+        "type": "object",
+        "required": ["date"],
+        "properties": {
+          "date": {
+            "type": "string",
+            "description": "The requested date to get the food list",
+            "example": "01.05.21"
+          }
+        }
+      },
+      "GetEatenProductsResponse": {
+        "type": "object",
+        "items": {
+          "type": "array",
+          "properties": {
+            "userFoodListByDay": {
+              "type": "array",
+              "description": "User's eaten products list at required day"
+            }
+          }
+        },
+         "example": {
+            "message": "success",
+            "userFoodListByDay": [
+              {
+              "_id": "610194d7cdcd37c2ca8d3225",
+              "title": "pizza",
+              "weight": "100",
+              "calories": "320",
+              "date": "01.06.21"
+              },
+              {
+                "_id": "610194d7cdcd37c2ca8d3390",
+                "title": "banana",
+                "weight": "100",
+                "calories": "220",
+                "date": "01.06.21"
+              }
+            ]
+        }
+      },
+      "DeleteEatenProductsResponse" : {
+        "type": "object",
+        "items": {
+          "type": "string",
+          "properties": {
+            "message": {
+              "type": "string",
+              "description": "Result of operation"
+            }
+          }
+        },
+         "example": {
+            "message": "Product has been successfully deleted"
+          }
+      }
       }
     },
     "securitySchemes": {
@@ -380,5 +500,4 @@
         "bearerFormat": "JWT"
       }
     }
-  }
 }
